--- a/index.html
+++ b/index.html
@@ -9,133 +9,49 @@
 
 <body>
     <div id="learning-vue">
-        <p v-show="show">show</p>
-        <p v-if="directive">if directive</p>
-        <p v-else="!directive">else-if directive</p>
-        <p v-else="directive">else directive</p>
-        <form>
-            <input type="text" name="userName" v-model="value" />
-            <p>{{value}}</p>
-        </form>
-        <ul>
-            <li v-for="(tab,index) in tabs" :class="tab+index" v-on:click="change(index)" track-by="tab.id">{{tab.name}}
-                {{index}}</li>
-        </ul>
-        <a :[attributename]="src"> ... </a>
-        <img :src="src" />
-        <div :id="id1">
-            123
-        </div>
-        <div :class="[classA,{classB:isB}]">
-            class
-        </div>
-        <div v-bind="{id:id1,class:[classA,{classB:isB}]}">
-            other
-        </div>
-
-        <div @click="clickMe(1,$event)">
-            event
-        </div>
-        <div v-on:click="clickMe(2,$event)">
-            event2
-        </div>
-
-        <a href="http://www.baidu.com" v-on:click.prevent="clickMe(1,$event)">www.baidu.com</a>
-
-        <div @click="clickMe(1,$event)">
-            <div v-on:click.stop="clickMe(2,$event)">
-                event2
-            </div>
-        </div>
-
-        <input type="text" value="space" @keyup.enter="clickMe(1,$event)">
-        <input type="text" value="space" @keyup.13="clickMe(1,$event)">
-
-        <div v-cloak>
-            {{ message }}
-        </div>
-
-        <p rel=ele @click="clickMe">v-el</p>
-        <p ref=oneRef @click="clickMe">v-ref</p>
-        <div v-demo:a.b.c="message" @click="clickDirec()"></div>
-
-        <p v-pin="200">Stick me 200px from the top of the page</p>
-        <p v-pin1:[direction]="200">I am pinned onto the page at 200px to the left.</p>
+        <p>{{message}}</p>
+        <p>reversed message: "{{ reversedMessage }}"</p>
+        <p>function reversed message :{{reversedMessageFunc()}}</p>
+        <input type="text" v-model="name">
+        <p>{{fullName}}</p>
+        <button @click="grow()">grow</button>
     </div>
 </body>
-<style>
-    [v-cloak] {
-        display: none;
-    }
-</style>
 <script>
-    // 定义指令
-    Vue.directive('pin', {
-        bind: function (el, binding, vnode) {
-            el.style.position = 'fixed'
-            el.style.top = binding.value + 'px'
-        }
-    })
-    Vue.directive('pin1', {
-        bind: function (el, binding, vnode) {
-            el.style.position = 'fixed'
-            var s = (binding.arg == 'left' ? 'left' : 'top')
-            el.style[s] = binding.value + 'px'
-        }
-    })
-
-    Vue.directive('demo', {
-        bind: function (el, binding, vnode) {
-            var s = JSON.stringify;
-            el.innerHTML =
-                'name: ' + s(binding.name) + '<br>' +
-                'value: ' + s(binding.value) + '<br>' +
-                'expression: ' + s(binding.expression) + '<br>' +
-                'argument: ' + s(binding.arg) + '<br>' +
-                'modifiers: ' + s(binding.modifiers) + '<br>' +
-                'vnode keys: ' + Object.keys(vnode).join(', ')
-        },
-        update: function (el, value) {
-            console.log(el);
-            console.log(value);
-        }
-    })
     new Vue({
         el: "#learning-vue",
         data: {
-            message: {
-                name: 'hello qinhanwen',
-                age: 25
-            },
-            attributename:'href',
-            direction: 'left',
-            // ele:'',
-            show: false,
-            directive: false,
-            value: '',
-            id1: 'myId',
-            tabs: [{
-                name: 'q',
-                id: 1
-            }, {
-                name: 'z',
-                id: 2
-            }],
-            src: 'xxx.png',
-            classA: 'A',
-            isB: true,
+            message: 'hello qinhanwen',
+            name: 'qinhanwen',
+            fullName: '',
         },
         methods: {
-            change(index) {
-                this.tabs = this.tabs.filter((item, i) => i == index);
+            reversedMessageFunc: function () {
+                return this.message.split('').reverse().join('');
             },
-            clickMe() {
-                console.log(this.$refs);
-                console.log(this.$eles);
-            },
-            clickDirec() {
-                this.message = 'hello'
+            grow: function () {
+                this.myAge = 26;
             }
+        },
+        computed: {
+            // 计算属性的 getter
+            reversedMessage: function () {
+                // `this` 指向 vm 实例
+                return this.message.split('').reverse().join('');
+            },
+            myAge: {
+                set: function (value) {
+                    console.log(value);
+                },
+                get: function () {
+                    return this.myAge;
+                }
+            }
+        },
+        watch: {
+            name: function (newName, oldName) {
+                this.fullName = 'new name ' + newName;
+            },
         }
     })
 </script>
