--- a/index.html
+++ b/index.html
@@ -5,53 +5,89 @@
     <meta charset="UTF-8">
     <title>learning-vue</title>
 </head>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.6.0/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
 
 <body>
     <div id="learning-vue">
-        <p>{{message}}</p>
-        <p>reversed message: "{{ reversedMessage }}"</p>
-        <p>function reversed message :{{reversedMessageFunc()}}</p>
-        <input type="text" v-model="name">
-        <p>{{fullName}}</p>
-        <button @click="grow()">grow</button>
+        <button-counter></button-counter>
+        <post-list v-on:click-me="clickMe" v-for="post in posts" :post="post" :my-name="post.name"></post-list>
+        <slot-box :name1="name" :name2="name">
+            <template v-slot:default="slotProps">
+                {{slotProps.name1}}
+                {{slotProps.name2}}
+            </template>
+        </slot-box>
+        <slot-name-box>
+            <template v-slot:header>
+                <header>这里是header哦</header>
+            </template>
+            <template v-slot:footer>
+                <footer>这里是footer哦</footer>
+            </template>
+        </slot-name-box>
+        <slot-name-box>
+            <template #header>
+                <header>这里是header哦</header>
+            </template>
+            <template #footer>
+                <footer>这里是footer哦</footer>
+            </template>
+        </slot-name-box>
     </div>
 </body>
 <script>
+    Vue.component('button-counter', {
+        data: function () {
+            return {
+                count: 0
+            }
+        },
+        template: '<button v-on:click="count++">You clicked me {{ count }} times.</button>'
+    })
+    Vue.component('post-list', {
+        // props: ['post','myName'],
+        props: {
+            post: Object,
+            myName: String
+        },
+        template: `<p v-on:click="$emit('click-me','{a:1,b:2}')">{{post.title}}{{post.id}}{{myName}}</p>`
+    })
+    Vue.component('slot-box', {
+        props: ['name1', 'name2'],
+        template: `<div>my name is <slot :name1="name1" :name2="name2"></slot></div>`
+    })
+    Vue.component('slot-name-box', {
+        template: `
+        <div>
+            <slot name="header"></slot>
+            <slot name="footer"></slot>
+        </div>`
+    })
     new Vue({
         el: "#learning-vue",
         data: {
-            message: 'hello qinhanwen',
             name: 'qinhanwen',
-            fullName: '',
+            posts: [{
+                    id: 1,
+                    title: 'My journey with Vue',
+                    name: '123'
+                },
+                {
+                    id: 2,
+                    title: 'Blogging with Vue',
+                    name: '123'
+                },
+                {
+                    id: 3,
+                    title: 'Why Vue is so fun',
+                    name: '123'
+                }
+            ]
         },
         methods: {
-            reversedMessageFunc: function () {
-                return this.message.split('').reverse().join('');
-            },
-            grow: function () {
-                this.myAge = 26;
+            clickMe: function (params) {
+                console.log(params)
             }
-        },
-        computed: {
-            // 计算属性的 getter
-            reversedMessage: function () {
-                // `this` 指向 vm 实例
-                return this.message.split('').reverse().join('');
-            },
-            myAge: {
-                set: function (value) {
-                    console.log(value);
-                },
-                get: function () {
-                    return this.myAge;
-                }
-            }
-        },
-        watch: {
-            name: function (newName, oldName) {
-                this.fullName = 'new name ' + newName;
-            },
         }
     })
 </script>
